--- a/index.html
+++ b/index.html
@@ -69,10 +69,26 @@
         height: 64px;
       }
     </style>
+    <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
   </head>
   <img src=Dewars.jpg>
   <body>
     <h1>LIFFテストページ</h1>
     <p>LIFFの作成を色々と試すためのページです。</p>
   </body>
+  
+  <script>
+    const liffId = "1654450813-w7bodxYN"
+    const Name = document.getElementById('profile_name');
+    const Img = document.getElementById("profile_img");
+ 
+    liff.init({liffId}).then(() => {
+      if (liff.isLoggedIn()) {
+      }
+      else{
+        liff.login();
+      }
+    })
+  </script>
+  
 </html>
