--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
   <img src=Dewars.jpg>
   <body>
     <h1>LIFFテストページ</h1>
+    <img id="profile_img" class="profile" src=""/>
+    <h2 id="profile_name"></h2>
     <p>LIFFの作成を色々と試すためのページです。</p>
   </body>
   
