--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
     <img id="profile_img" class="profile" src=""/>
     <h2 id="profile_name"></h2>
     <p>LIFFの作成を色々と試すためのページです。</p>
+    <button class="btn" id="closeWindowButton">close</button>
+    
   </body>
   
   <script>
@@ -109,6 +111,17 @@
         liff.login();
       }
     })
+    
+    function closeWindow() {
+      if (!liff.isInClient()) {
+        sendAlertIfNotInClient();
+      } else {
+          liff.closeWindow();
+      }
+    }
+   
+    document.getElementById('closeWindowButton').addEventListener('click', closeWindow)
+  
   </script>
   
 </html>
