--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         liff.shareTargetPicker(
           [{
             type: 'text',
-            text: liffUrl
+            text: 'https://liff.line.me/1654450813-w7bodxYN'
           }]
         ).then(function() {
         }).catch(function(error) {
