--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
         }).catch(function(error) {
           window.alert('シェア機能でエラーが起こりました：'+ error);
         });
-      };
+      }else{
+        liff.closeWindow();
+      }
     }
      
     
