--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="ja">
-  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
-    <meta property="og:url" content="https://jhashimoto.github.io/myLiffProject/" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="OGタグのページのタイトル" />
+<html lang="ja" prefix="og: http://ogp.me/ns#">
+  <meta property="og:title" content="OGPタイトル">
+  <meta property="og:type" content="`website`">
+  <meta property="og:description" content="OPGページの簡単な説明">
+  <meta property="og:url" content="https://www.test.com">
+  <meta property="og:site_name" content="サイト全体を表す名前">
+  <meta property="og:image" content="https://d.line-scdn.net/n/line_lp/img/ogimage.png">
+  <head>
 　　  <style>
       html {
         font-family: "Yu Gothic", YuGothic, Verdana, 'Hiragino Kaku Gothic ProN','Hiragino Kaku Gothic Pro', 'ヒラギノ角ゴ Pro W3', 'メイリオ', Meiryo, sans-serif;
