--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja" prefix="og: http://ogp.me/ns#">
-  <meta property="og:title" content="OGPタイトル">
+  <meta property="og:title" content="OGPタグ動作確認用：タイトル">
   <meta property="og:type" content="`website`">
-  <meta property="og:description" content="OPGページの簡単な説明">
+  <meta property="og:description" content="OPGタグ動作確認用：ページの簡単な説明">
   <meta property="og:url" content="https://www.test.com">
-  <meta property="og:site_name" content="サイト全体を表す名前">
+  <meta property="og:site_name" content="タグ動作確認用：サイト全体を表す名前">
   <meta property="og:image" content="https://d.line-scdn.net/n/line_lp/img/ogimage.png">
   <head>
 　　  <style>
