--- a/index.html
+++ b/index.html
@@ -76,6 +76,28 @@
       }
     </style>
     <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+    <!-- LINE Tag Base Code -->
+    <!-- Do Not Modify -->
+    <script>
+    (function(g,d,o){
+      g._ltq=g._ltq||[];g._lt=g._lt||function(){g._ltq.push(arguments)};
+      var h=location.protocol==='https:'?'https://d.line-scdn.net':'http://d.line-cdn.net';
+      var s=d.createElement('script');s.async=1;
+      s.src=o||h+'/n/line_tag/public/release/v1/lt.js';
+      var t=d.getElementsByTagName('script')[0];t.parentNode.insertBefore(s,t);
+        })(window, document);
+    _lt('init', {
+      customerType: 'account',
+      tagId: '2e2d72ee-4e29-499b-a533-721b885704e0'
+    });
+    _lt('send', 'pv', ['2e2d72ee-4e29-499b-a533-721b885704e0']);
+    </script>
+    <noscript>
+      <img height="1" width="1" style="display:none"
+           src="https://tr.line.me/tag.gif?c_t=lap&t_id=2e2d72ee-4e29-499b-a533-721b885704e0&e=pv&noscript=1" />
+    </noscript>
+    <!-- End LINE Tag Base Code -->
+
   </head>
   
   <img src=Dewars.jpg>
