--- a/btest/cvtest.html
+++ b/btest/cvtest.html
@@ -2,12 +2,19 @@
 <html>
 <head><!-- 裏設定エリアの開始 -->
     <meta charset="utf-8"><!-- 文字化け防止 -->
-  <script>
+  <!-- <script>
   _lt('send', 'cv', {
     type: 'Conversion'
   },['2e2d72ee-4e29-499b-a533-721b885704e0']);
-  </script>
+  </script> -->
+    <script>
+    _lt('send', 'cv', {
+      type: 'Conversion'
+    },['5f005966-c59b-4193-a812-51f3cb524b7a']);
+    </script>
+
 </head><!-- 裏設定エリアの終了 -->
+
  
 <body><!-- 画面に表示されるエリアの開始 -->
     LINE tag CVテスト
