--- a/btest/cvtest.html
+++ b/btest/cvtest.html
@@ -7,6 +7,27 @@
     type: 'Conversion'
   },['2e2d72ee-4e29-499b-a533-721b885704e0']);
   </script> -->
+  <!-- LINE Tag Base Code -->
+  <!-- Do Not Modify -->
+    <script>
+    (function(g,d,o){
+      g._ltq=g._ltq||[];g._lt=g._lt||function(){g._ltq.push(arguments)};
+      var h=location.protocol==='https:'?'https://d.line-scdn.net':'http://d.line-cdn.net';
+      var s=d.createElement('script');s.async=1;
+      s.src=o||h+'/n/line_tag/public/release/v1/lt.js';
+      var t=d.getElementsByTagName('script')[0];t.parentNode.insertBefore(s,t);
+        })(window, document);
+    _lt('init', {
+      customerType: 'account',
+      tagId: '5f005966-c59b-4193-a812-51f3cb524b7a'
+    });
+    _lt('send', 'pv', ['5f005966-c59b-4193-a812-51f3cb524b7a']);
+    </script>
+    <noscript>
+      <img height="1" width="1" style="display:none"
+           src="https://tr.line.me/tag.gif?c_t=lap&t_id=5f005966-c59b-4193-a812-51f3cb524b7a&e=pv&noscript=1" />
+    </noscript>
+    <!-- End LINE Tag Base Code -->
     <script>
     _lt('send', 'cv', {
       type: 'Conversion'
