--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
     </noscript>
     <!-- End LINE Tag Base Code -->
 
+    <!-- PWA -->
+    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="css/style.css">
+
+
+    
   </head>
   
   <img src=Dewars.jpg>
@@ -305,8 +311,17 @@
    
     document.querySelector("#shareFriends").addEventListener("click", shareFriends)
     document.getElementById('closeWindowButton').addEventListener('click', closeWindow)
-    
-  
+
+
+    /* pwa関連 */
+    // ServiceWorker登録：https://developers.google.com/web/fundamentals/primers/service-workers/?hl=ja
+if ('serviceWorker' in navigator) {
+	navigator.serviceWorker.register('sw.js').then(function(registration) {
+		console.log('ServiceWorker registration successful with scope: ', registration.scope);
+	}).catch(function(err) {
+		console.log('ServiceWorker registration failed: ', err);
+	});
+}
   </script>
   
 </html>
